--- a/app/src/main/res/layout/fragment_lookup.xml
+++ b/app/src/main/res/layout/fragment_lookup.xml
@@ -74,4 +74,13 @@
         app:layout_constraintStart_toStartOf="@+id/logo_l"
         app:layout_constraintTop_toTopOf="@+id/logo_l" />
 
+    <TextView
+        android:id="@+id/testtext"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:visibility="gone"
+        tools:layout_editor_absoluteX="177dp"
+        tools:layout_editor_absoluteY="661dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
