--- a/app/src/main/res/layout/fragment_lookup.xml
+++ b/app/src/main/res/layout/fragment_lookup.xml
@@ -31,16 +31,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent=".75">
+        app:layout_constraintWidth_percent=".75" >
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal|center_vertical"
+            android:selectAllOnFocus="true"
+            android:singleLine="true"
             android:textColor="@color/white"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            android:inputType="textUri"
+            android:focusable="true"
+            android:focusableInTouchMode="true" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
