--- a/app/src/main/res/layout/fragment_lookup.xml
+++ b/app/src/main/res/layout/fragment_lookup.xml
@@ -76,11 +76,10 @@
 
     <TextView
         android:id="@+id/testtext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="335dp"
+        android:layout_height="649dp"
         android:text="TextView"
-        android:visibility="gone"
-        tools:layout_editor_absoluteX="177dp"
-        tools:layout_editor_absoluteY="661dp" />
+        tools:layout_editor_absoluteX="43dp"
+        tools:layout_editor_absoluteY="38dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
