--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,10 +8,10 @@
         <item name="colorPrimaryVariant">@color/primary_800</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/secondary_500</item>
-        <item name="colorSecondaryVariant">@color/secondary_500</item>
+        <item name="colorSecondary">@color/primary_800</item>
+        <item name="colorSecondaryVariant">@color/primary_800</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+         Status bar color.
         <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
         <!-- Customize your theme here. -->
         <item name="colorSurface">@null</item>
