--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -9,4 +9,39 @@
         <item>reply</item>
         <item>reply_all</item>
     </string-array>
+    
+    <string-array name="languages_name">
+        <item>English</item>
+        <item>Serbian Latin</item>
+        <item>Serbian Cyrilic</item>
+    </string-array>
+
+    <string-array name="languages_value">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="resolution_name">
+        <item>1080p</item>
+        <item>720p</item>
+        <item>480p</item>
+    </string-array>
+
+    <string-array name="resolution_value">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="orientation_name">
+        <item>Portrait</item>
+        <item>Landscape</item>
+    </string-array>
+
+    <string-array name="orientation_value">
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
 </resources>
