--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -1,11 +1,14 @@
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent">
 
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
+
 
         <FrameLayout
             android:id="@+id/settings"
@@ -13,6 +16,7 @@
             android:layout_height="match_parent">
 
         </FrameLayout>
+
     </TableRow>
 
     <TableRow
@@ -20,10 +24,28 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/support"
-            android:layout_width="match_parent"
+            android:layout_width="400dp"
             android:layout_height="match_parent">
+
+
+            <Button
+                android:id="@+id/supportButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:insetTop="6dp"
+                android:text="@string/support"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.905"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.877"
+                tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </TableRow>
