--- a/app/src/main/res/layout/settings_activity.xml
+++ b/app/src/main/res/layout/settings_activity.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/settings"
+    <TableRow
+        android:id="@+id/settingscntnr"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -35,15 +35,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="24dp"
                 android:insetTop="6dp"
                 android:text="@string/support"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.905"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.877"
                 tools:visibility="visible" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
